--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ group 'org.usino.websitetest'
 version '1.0-SNAPSHOT'
 
 apply plugin: 'java'
+apply plugin: 'idea'
 
 sourceCompatibility = 1.8
 
@@ -10,6 +11,6 @@ repositories {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.11'
+    testCompile group: 'junit', name: 'junit', version: '4.12'
     compile 'org.seleniumhq.selenium:selenium-java:3.4.0'
 }
